--- a/nhost-vue-quickstart/package.json
+++ b/nhost-vue-quickstart/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@nhost/vue": "^2.6.0",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue-slider-component": "^4.1.0-beta.7"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
