--- a/nhost/metadata/databases/default/tables/public_Pumps.yaml
+++ b/nhost/metadata/databases/default/tables/public_Pumps.yaml
@@ -5,6 +5,8 @@ select_permissions:
   - role: public
     permission:
       columns: [ID, ProductName, Power, FlowRate, Weight]
+      filter: {}
   - role: user
     permission:
       columns: [ID, ProductName, Power, FlowRate, Weight]
+      filter: {}
