--- a/nhost-vue-quickstart/package.json
+++ b/nhost-vue-quickstart/package.json
@@ -10,7 +10,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "s3-sync": "aws --profile personal s3 sync ./dist/ s3://kurt-web-demo/"
   },
   "dependencies": {
     "@nhost/vue": "^2.6.0",
