--- a/nhost-vue-quickstart/package.json
+++ b/nhost-vue-quickstart/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@nhost/vue": "^2.6.0",
+    "bootstrap": "^5.3.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vue-slider-component": "^4.1.0-beta.7"
