--- a/nhost/metadata/databases/default/tables/storage_files.yaml
+++ b/nhost/metadata/databases/default/tables/storage_files.yaml
@@ -52,3 +52,8 @@ object_relationships:
   - name: bucket
     using:
       foreign_key_constraint_on: bucket_id
+select_permissions:
+  - role: public
+    permission:
+      columns: [ID, ProductName, Power, FlowRate, Weight, submersible]
+      filter: {}
