--- a/nhost/metadata/databases/default/tables/storage_files.yaml
+++ b/nhost/metadata/databases/default/tables/storage_files.yaml
@@ -55,5 +55,16 @@ object_relationships:
 select_permissions:
   - role: public
     permission:
-      columns: [ID, ProductName, Power, FlowRate, Weight, submersible]
+      columns:
+        - is_uploaded
+        - size
+        - metadata
+        - bucket_id
+        - etag
+        - mime_type
+        - name
+        - created_at
+        - updated_at
+        - id
+        - uploaded_by_user_id
       filter: {}
