--- a/nhost/metadata/databases/default/tables/tables.yaml
+++ b/nhost/metadata/databases/default/tables/tables.yaml
@@ -8,6 +8,7 @@
 - "!include auth_user_security_keys.yaml"
 - "!include auth_users.yaml"
 - "!include public_Pumps.yaml"
+- "!include public_Pumps_v2.yaml"
 - "!include storage_buckets.yaml"
 - "!include storage_files.yaml"
 - "!include storage_virus.yaml"
