Add some real filters

--- a/nhost/metadata/databases/default/tables/storage_files.yaml
+++ b/nhost/metadata/databases/default/tables/storage_files.yaml
@@ -52,6 +52,23 @@ object_relationships:
   - name: bucket
     using:
       foreign_key_constraint_on: bucket_id
+insert_permissions:
+  - role: user
+    permission:
+      check: {}
+      columns:
+        - is_uploaded
+        - size
+        - metadata
+        - bucket_id
+        - etag
+        - mime_type
+        - name
+        - created_at
+        - updated_at
+        - id
+        - uploaded_by_user_id
+    comment: ""
 select_permissions:
   - role: public
     permission:
@@ -68,3 +85,21 @@ select_permissions:
         - id
         - uploaded_by_user_id
       filter: {}
+update_permissions:
+  - role: user
+    permission:
+      columns:
+        - is_uploaded
+        - size
+        - metadata
+        - bucket_id
+        - etag
+        - mime_type
+        - name
+        - created_at
+        - updated_at
+        - id
+        - uploaded_by_user_id
+      filter: {}
+      check: {}
+    comment: ""
